# cPlayground

./: a.out  main.c
clox/: chunk.c  chunk.h  compile.c  compile.h  errno.h  memory.c  memory.h  parser.h  scanner.c  scanner.h  temp.txt  token.h  value.c  value.h  vm.c  vm.h
clox/lox/: CMakeLists.txt  a.out  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  temp.c  test.c  value.c  value.h  vm.c  vm.h
clox/tzzLox/: CMakeLists.txt  a.out  chunk.c  chunk.h  common.h  debug.c  debug.h  main.c  memory.h  object.h  parser.h  scanner.c  scanner.h  table.c  table.h  temp.txt  test.c  token.h  value.c  value.h  vm.c  vm.h
clox/tzzNewLox/: CMakeLists.txt  \  a.out  array.c  array.h  callframe.h  chunk.c  chunk.h  common.h  compile.c  compile.h  debug.c  debug.h  ioutil.c  ioutil.h  main.c  memory.c  memory.h  object.c  object.h  opcode.h  parser.c  parser.h  prattParser.h  scanner.c  scanner.h  stack.c  stack.h  stringObject.c  stringObject.h  table.c  table.h  temp.txt  test.c  testArray.c  testKeyword.c  token.h  value.c  value.h  vm.c  (+2 more)
clox/tzzNewLox/scanTest/: CMakeLists.txt  main.c
clox/tzzNewLox/tableTest/: CMakeLists.txt  (+4 more)
cmakePlayground/: CMakeLists.txt  main.c
cmakePlayground/mod1/: CMakeLists.txt  mod1.c  mod1.h
cmakePlayground/mod2/: CMakeLists.txt  mod2.c  mod2.h
cmakePlayground/test/: CMakeLists.txt  test.c  test.h
cppMap/: a.out  main.cpp
lib/: test.h  tzz.h
ptrace/: process1.c  ptrace.c
tree-sitter-pg/: CMakeLists.txt  a.out  main.c
(+8 files in other folders)
